2008-04-14  Tim-Philipp Müller  <tim at centricular dot net>

	* gst-plugins-good.spec.in:
	  Update for souphttpsrc plugin which has moved to -good.

2008-04-14  Jan Schmidt  <Jan.Schmidt@sun.com>

	* gst/matroska/matroska-demux.c:
	(gst_matroska_demux_handle_seek_event):
	Fix open-ended seeks in matroskademux
	Patch by: Mark Nauwelaerts <manauw skynet be>
	Fixes: #526557

2008-04-14  Jan Schmidt  <jan.schmidt@sun.com>

	* tests/check/Makefile.am:
	Add soup test certificates to the dist.

2008-04-13  Jan Schmidt  <jan.schmidt@sun.com>

	* ext/Makefile.am:
	Remove LADSPA reference I missed.

2008-04-13  Sebastian Dröge  <slomo@circular-chaos.org>

	* ext/soup/gstsouphttpsrc.c: (plugin_init):
	Give souphttpsrc GST_RANK_PRIMARY to make it the default HTTP source
	over gnome-vfs and everything else. Fixes bug #527848.

2008-04-13  Jan Schmidt  <jan.schmidt@sun.com>

	* configure.ac:
	* ext/Makefile.am:
	Remove LADSPA plugin. Fixes: #515978

2008-04-13  Jan Schmidt  <jan.schmidt@sun.com>

	* configure.ac:
	* docs/plugins/Makefile.am:
	* docs/plugins/gst-plugins-good-plugins-docs.sgml:
	* docs/plugins/gst-plugins-good-plugins-sections.txt:
	* docs/plugins/gst-plugins-good-plugins.args:
	* docs/plugins/inspect/plugin-soup.xml:
	* ext/Makefile.am:
	* tests/check/Makefile.am:
	Move soup plugin from -bad (Fixes: #523124)

2008-04-11  Jan Schmidt  <Jan.Schmidt@sun.com>

	* ext/speex/gstspeexdec.c: (speex_dec_chain_parse_header):
	Fix bounds checking of mode in Speex header, which may
	produce negative numbers in speex <= 1.1.12

2008-04-09  Tim-Philipp Müller  <tim at centricular dot net>

	* gst/goom/Makefile.am:
	* gst/goom/gfontlib.c:
	* gst/goom/gfontlib.h:
	* gst/goom/gfontrle.c:
	* gst/goom/gfontrle.h:
	* gst/goom/goom.h:
	* gst/goom/goom_core.c: (goom_update):
	* gst/goom/goom_plugin_info.h:
	* gst/goom/gstgoom.c: (gst_goom_chain):
	* gst/goom/plugin_info.c:
	  Remove a bunch of font/text related code that we don't need.
